DFG::FlowMap::resize() shouldn't resize the shadow map unless we're in SSA https://bugs.webkit.org/show_bug.cgi?id=185453

Reviewed by Michael Saboff.

Tiny improvement for compile times.

* dfg/DFGFlowMap.h:
(JSC::DFG::FlowMap::resize): Remove one Vector::resize() when we're not in SSA.
* dfg/DFGInPlaceAbstractState.cpp:
(JSC::DFG::InPlaceAbstractState::beginBasicBlock): Record some data about how long we spend in different parts of this and add a FIXME linking bug 185452.



Canonical link: https://commits.webkit.org/200918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231522 268f45cc-cd09-0410-ab3c-d52691b4dbfc